src/styles/main.scss
/* ... */
.app__button--white {
  align-self: flex-start;
  background: $primary-text-color;
  border-radius: 4px;
  color: $primary-theme-color;
  display: inline-block;
  font-size: 20px;
  font-weight: 500;
  line-height: 23px;
  padding: 1em 3em;
}

.app__button--white:hover {
  cursor: pointer;
}

.app__white-button--small {
  align-self: flex-start;
  background: $primary-text-color;
  border-radius: 4px;
  color: $primary-theme-color;
  display: inline-block;
  font-weight: 500;
  line-height: 23px;
  padding: 1em 3em;
}

.app__white-button--small:hover {
  cursor: pointer;
}

.app__button--black {
  align-self: flex-start;
  background: $primary-theme-color;
  border: 1px solid $secondary-theme-color;
  border-radius: 4px;
  color: $primary-text-color;
  display: inline-block;
  font-size: 20px;
  font-weight: 500;
  line-height: 23px;
  padding: 1em 3em;
}

.app__button--white:hover {
  cursor: pointer;
}

.app__black-button--small {
  align-self: flex-start;
  background: $primary-theme-color;
  border: 1px solid #c4c4c4;
  border-radius: 4px;
  color: $primary-text-color;
  display: inline-block;
  font-weight: 500;
  line-height: 23px;
  padding: 1em 3em;
}

.app__black-button--small:hover {
  cursor: pointer;
}

/* ----------
TABLE
---------- */
.table {
  width: 100%;
}

.table__header {
  border-bottom: 1px solid $secondary-theme-color;
}

.table__header-text {
  @include label-text;
  padding: 0.5em 2em 1em 0em;
  text-align: left;
}

// used in HistoryMonthTable
.table__month-text {
  @include label-text--highlight;
  text-align: left;
}

.table__header-weight-text {
  @include label-text;
  padding-right: none;
  padding-left: 0;
  text-align: left;
}

.table__body-row:first-of-type td {
  padding-top: 1em;
}

.table__table-data {
  font-size: $extra-small-font-size;
  padding: 0.5em 2em 0.5em 0em;
}

.table__weight-data {
  font-size: $extra-small-font-size;
  padding-right: none;
}

/* ----------
ASTRIAGRAPH
---------- */
.astriagraph__wrapper {
  align-items: center;
  background: $primary-theme-color;
  display: flex;
  justify-content: center;
  height: 100px;
  width: 100%;
}

@media (min-width: 600px) {
  .astriagraph__wrapper {
    height: 300px;
  }
}

/* ----------
CATALOG
---------- */
.catalog__wrapper {
  margin: 0em 1em;
}

.catalog__header {
  @include view-title;
  margin: 0.5em 0;
}

@media (min-width: 600px) {
  .catalog__wrapper {
    margin: 0em 4em;
  }
  .catalog__header {
    @include view-title--desktop;
    margin: 0.5em 0;
  }
}

.catalog__nav-bar-how-to-wrapper {
  display: flex;
  margin-bottom: 3em;
}

/* ----------
CATALOF FILTER DESCRIPTION
---------- */
.catalog__filter-description {
  @include body-text--large-desktop;
  margin-right: 3em;
}

/* ----------
HOW TO PARTICIPATE
---------- */
.catalog__how-to-wrapper {
  min-width: 250px;
}

.catalog__how-to-text {
  border-bottom: 1px solid $secondary-theme-color;
  @include section-title;
  margin-bottom: 1em;
  padding-bottom: 0.5em;
}

.catalog__button {
  border: 1px solid #5f5f5f;
  border-radius: 4px;
  display: inline-block;
  margin-bottom: 1em;
  padding: 0.5em;
}

.catalog__link {
  color: $primary-text-color;
}

.catalog__get-data-button {
  margin-right: 1em;
}

.catalog__link-text-wrapper {
  margin-top: 2em;
}

.catalog__link-text {
  color: $secondary-theme-color;
  text-decoration-line: underline;
  margin-bottom: 0.5em;
}

/* ----------
CATALOG NAV DROPDOWN
---------- */
.catalog-nav-dropdown__wrapper {
  border: 1px solid red;
}

@media (min-width: 600px) {
  .catalog-nav-dropdown__wrapper {
    display: none;
  }
}

/* ----------
CATALOG NAV BAR
---------- */
.catalog-nav-bar__wrapper {
  display: none;
}

@media (min-width: 600px) {
  .catalog-nav-bar__wrapper {
    border-bottom: 1px solid $secondary-theme-color;
    display: flex;
    flex: 1;
    justify-content: column;
    margin: 0em 5em 1em 0;
  }
}

.catalog-nav-bar__link--highlight {
  border-bottom: 4px solid $primary-highlight-color;
  color: $primary-text-color;
  margin-right: 2em;
  padding-bottom: 0.5em;
  text-decoration: none;
}

.catalog-nav-bar__link--highlight:hover {
  cursor: pointer;
}

.catalog-nav-bar__link--lowlight {
  border-bottom: 4px solid $primary-theme-color;
  color: $secondary-theme-color;
  margin-right: 2em;
  padding-bottom: 0.5em;
  text-decoration: none;
}

.catalog-nav-bar__link--lowlight:hover {
  cursor: pointer;
}

/* ----------
CATALOG TABLE
---------- */
.catalog-table__object-data-wrapper {
  align-items: center;
  display: flex;
}

.catalog-table__body-row {
  border-bottom: 1px solid $tertiary-color;
}

.catalog-table__table-data {
  padding: 0em 2em 0em 0em;
}

/* ---------- 
PROFILE
---------- */
.profile__wrapper {
  margin: 3em 4em;
}

.profile__header-wrapper {
  border: 1px solid $secondary-theme-color;
  border-left: none;
  border-right: none;
  display: flex;
  padding: 1em 0;
}

.profile__header-info-wrapper {
  margin-left: 1em;
  height: 100%;
  width: 100%;
}

.profile__header-username {
  @include view-title--desktop;
  margin-left: none;
  padding-left: none;
}

.profile__header-info-data-wrapper {
  display: flex;
  margin-left: 0.25em;
}

.profile__header-info-data-key {
  align-items: center;
  display: flex;
  font-size: $extra-small-font-size;
  margin-right: 3em;
  color: $secondary-theme-color;
}

.profile__header-info-data-value {
  color: $primary-text-color;
  font-size: $small-font-size;
}

.profile__bio-wrapper {
  margin-top: 2em;
}

.profile__background-header {
  @include section-title;
}

.profile__objects-tracked-wrapper {
  margin-top: 3em;
}

.profile__sub-heading {
  @include section-title;
  border-bottom: 1px solid $primary-text-color;
  padding-bottom: 0.5em;
  margin-bottom: 0.25em;
}

.profile__your-observations-wrapper {
  margin-top: 3em;
}

/* ----------
PROFILE TABLE 
---------- */
.profile-table__body-row {
  border-bottom: 1px solid $tertiary-color;
}

.profile-table__data-wrapper {
  align-items: center;
  display: flex;
}
/* ... */

